add model users

--- a/app/Resources/views/default/reg.html.twig
+++ b/app/Resources/views/default/reg.html.twig
@@ -15,22 +15,22 @@
 		<div class="row">
 			<div class="col-xs-1"></div>
 			<div class="col-xs-10">
-					<form action="" method="POST" role="form" id="reg_form">
+					<form action="{{ path('adduser')}}" method="POST" enctype="application/x-www-form-urlencoded" role="form" id="reg_form">
 						<div class="nav nav-tabs">
 							<li role="presentation" class="active"><a href="#">Регистрация</a></li>
   							<li role="presentation"><a href="#">Вход</a></li>
 						</div><br />
 						<div class="form-group">
 							<label for="">Ваша электронная почта</label>
-							<input type="text" class="form-control" id="mail" placeholder="Input field">
+							<input type="text" class="form-control" id="mail" name="mail" placeholder="example@mail.ru">
 						</div>
 						<div class="form-group" id="passwd1_group">
 							<label for="">Пароль</label>
-							<input type="password" class="form-control" id="passwd1">
+							<input type="password" class="form-control" id="passwd1" name="passwd1">
 						</div>
 						<div class="form-group" id="passwd2_group">
 							<label for="">Повторите пароль</label>
-							<input type="password" class="form-control" id="passwd2">
+							<input type="password" class="form-control" id="passwd2" name="passwd2">
 						</div>
 						<div class="row">
 							<div class="col-xs-2"></div>
