--- a/app/Resources/views/default/profile.html.twig
+++ b/app/Resources/views/default/profile.html.twig
@@ -1,11 +1,184 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<script src="{{asset('js/jquery-2.1.3.min.js')}}" language="JavaScript"></script>
+	<link href="{{asset('lib/bootstrap-3.3.2-dist/css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" />
+	<script src="{{asset('lib/bootstrap-3.3.2-dist/js/bootstrap.min.js')}}" language="JavaScript"></script>
+	
+	<link href="{{asset('css/blogger.css?78934')}}" rel="stylesheet" type="text/css" />
+	<script src="{{asset('js/t-blog.js?3453')}}" language="JavaScript"></script>
 	<title>t-blog registration</title>
 </head>
 <body>
-	{{ user }}<br />
-	
+	<div class="tblog-container">
+		<div class="tblog-head">
+			<img alt="Brand" src="{{asset('images/logo.png')}}">
+		</div>
+		
+		<div class="container">
+		<nav class="navbar navbar-default" role="navigation">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>			
+			</div>
+			
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="#">Авторы</a></li>
+					<li><a href="#">Сообщества</a></li>
+				</ul>
+				<form class="navbar-form navbar-left" role="search">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Search">
+					</div>
+					<button type="submit" class="btn btn-default">Искать</button>
+				</form>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">Выйти</a></li>				
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</nav>
+		
+		<div class="row">
+		<div class="col-lg-9">
+				<div class="account-post">
+					<div class="account-post-head">Head</div>
+					<div class="account-post-body">
+						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+					</div>
+					<div class="account-post-status">
+						<div class="btn-group" role="group" aria-label="...">
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>128
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
+								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>507
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="account-post">
+					<div class="account-post-head">Head</div>
+					<div class="account-post-body">
+						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+					</div>
+					<div class="account-post-status">
+						<div class="btn-group" role="group" aria-label="...">
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>251
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
+								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>26
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="account-post">
+					<div class="account-post-head">Head</div>
+					<div class="account-post-body">
+						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+					</div>
+					<div class="account-post-status">
+						<div class="btn-group" role="group" aria-label="...">
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>258
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
+								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>457
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="account-post">
+					<div class="account-post-head">Head</div>
+					<div class="account-post-body">
+						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+					</div>
+					<div class="account-post-status">
+						<div class="btn-group" role="group" aria-label="...">
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>134
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
+								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>3456
+							</button>
+						</div>
+					</div>
+				</div>
+				<div class="account-pager">
+					<ul class="pagination">
+						<li><a href="#">&laquo;</a></li>
+						<li><a href="#">1</a></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li><a href="#">4</a></li>
+						<li><a href="#">5</a></li>
+						<li><a href="#">&raquo;</a></li>
+					</ul>
+				</div>
+		</div>
+		<div class="col-lg-3">
+			<div class="account-sidebar">
+				<div class="account-photo">
+					<img src="{{ asset('images/avatars/4.jpg') }}" class="img-circle" id="avatar" alt="">
+					<div class="avatar-menu">
+						Загрузить фото
+					</div>
+				</div>
+				<div class="account-sidebar-menu">
+					<div class="account-menu-item"></div>
+				</div>
+				<div class="account-sidebar-archive">
+					<div class="account-archive-item"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
