--- a/web/css/blogger.css
+++ b/web/css/blogger.css
@@ -54,3 +54,60 @@ body{
 	background-color: #F9F9F9;
 	border-top: 1px solid #E5E5E5;
 }
+
+.account-body{
+	width: 900px;
+}
+
+.account-post{
+	width: 800px;
+	margin-bottom: 25px;
+	margin-left: 25px;
+	margin-right: 25px;
+}
+
+.account-post-head{
+	height: 30px;
+	color: #000;
+	font-size: 24px;
+	font-family: Arial;
+}
+
+.account-post-body{
+	width: 100%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.account-post-status{
+	width: 100%;
+	height: 34px;
+}
+
+.account-pager{
+	width: 100%;
+	height: 34px;
+	text-align: center;
+}
+
+.account-sidebar{
+	text-align: center;
+}
+
+.account-photo{
+	width: 150px;
+	margin: 0 auto;	
+}
+
+.avatar-menu{
+	width: 150px;	
+	height: 18px;
+	margin-top: -18px;
+	background: rgba(0, 0, 0, 0.6);
+	color: #FFF;
+	font-size: 14px;
+	font-family: Arial;
+	position: absolute;
+	display: none;
+	z-index: 12;
+}
