--- a/app/Resources/views/default/profile.html.twig
+++ b/app/Resources/views/default/profile.html.twig
@@ -7,7 +7,7 @@
 	<script src="{{asset('lib/bootstrap-3.3.2-dist/js/bootstrap.min.js')}}" language="JavaScript"></script>
 	
 	<link href="{{asset('css/blogger.css?78934')}}" rel="stylesheet" type="text/css" />
-	<script src="{{asset('js/t-blog.js?3453')}}" language="JavaScript"></script>
+	<script src="{{asset('js/account.js?3453')}}" language="JavaScript"></script>
 	<title>t-blog registration</title>
 </head>
 <body>
@@ -40,6 +40,17 @@
 					</div>
 					<button type="submit" class="btn btn-default">Искать</button>
 				</form>
+				
+				<button type="submit" class="btn btn-default navbar-btn" title="Написать статью">
+					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+				</button>
+				<button type="submit" class="btn btn-default navbar-btn" title="Избранное">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+				</button>
+				<button type="submit" class="btn btn-default navbar-btn" title="Настройки">
+					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+				</button>
+
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Выйти</a></li>				
 				</ul>
@@ -61,10 +72,7 @@
 								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-							</button>
-							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
 								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>128
@@ -72,6 +80,9 @@
 							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
 								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>507
 							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>goblin
+							</button>
 						</div>
 					</div>
 				</div>
@@ -86,10 +97,7 @@
 								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-							</button>
-							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
 								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>251
@@ -97,6 +105,9 @@
 							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
 								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>26
 							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>amme
+							</button>
 						</div>
 					</div>
 				</div>
@@ -111,10 +122,7 @@
 								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-							</button>
-							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
 								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>258
@@ -122,6 +130,9 @@
 							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
 								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>457
 							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>ankonian
+							</button>
 						</div>
 					</div>
 				</div>
@@ -131,21 +142,21 @@
 						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
 					</div>
 					<div class="account-post-status">
-						<div class="btn-group" role="group" aria-label="...">
+						<div class="btn-group" role="group">
 							<button type="button" class="btn btn-default" aria-label="Left Align">
 								<span class="glyphicon glyphicon-book" aria-hidden="true"></span>Читать далее
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
-							</button>
-							<button type="button" class="btn btn-default" aria-label="Left Align">
-								<span class="glyphicon glyphicon-send" aria-hidden="true"></span>
+								<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align">
 								<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>134
 							</button>
 							<button type="button" class="btn btn-default" aria-label="Left Align" disabled>
 								<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>3456
+							</button>
+							<button type="button" class="btn btn-default" aria-label="Left Align">
+								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>gr8
 							</button>
 						</div>
 					</div>
@@ -169,12 +180,27 @@
 					<div class="avatar-menu">
 						Загрузить фото
 					</div>
+					<div class="avatar-upload">
+						<input type="file" id="avatar_upload">
+					</div>
 				</div>
-				<div class="account-sidebar-menu">
-					<div class="account-menu-item"></div>
-				</div>
-				<div class="account-sidebar-archive">
-					<div class="account-archive-item"></div>
+				<div class="sidebar-widget">
+					<ul class="nav nav-tabs">
+						<li role="presentation" class="active"><a href="#">Архив</a></li>
+						<li role="presentation"><a href="#">Рубрики</a></li>
+					</ul>
+					<br />
+					<ul class="nav nav-pills nav-stacked">
+						<li role="presentation" class="active">
+							<a href="#">SEO <span class="badge">42</span></a>
+						</li>
+						<li role="presentation">
+							<a href="#">PHP <span class="badge">42</span></a>
+						</li>
+						<li role="presentation">
+							<a href="#">Frameworks <span class="badge">42</span></a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
